<resources>
    <string name="app_name">Guide App</string>
    <string name="app_name_city">Delfinópolis (Brasil)</string>

    <string name="content_authority">com.guideapp.guideapp</string>


    <string name="menu_local">Lugares no mapa</string>
    <string name="menu_alimentation">Alimentação</string>
    <string name="menu_attractive">Atrativos</string>
    <string name="menu_accommodation">hospedagem</string>

    <string name="title_save_favorite">Added to favorites</string>
    <string name="title_remove_favorite">Removed from favorites</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Pesquisar</string>

    <string name="menu_favorites">Favoritos</string>
    <string name="menu_opinion">Opiniões</string>
    <string name="search">Pesquisar...</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar massa.</string>

    <string name="action_remove_favorite">Remover favorito</string>
    <string name="action_save_favorite">Salvar favorito</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="view_my_account">Ver minha conta</string>
    <string name="hello_visitor">Olá visitante!</string>
    <string name="login">Fazer login</string>

    <string name="action_my_reviews">Minhas Avaliações</string>
    <string name="action_about">Sobre</string>
    <string name="action_logout">Sair</string>

    <string name="login_or">ou</string>
    <string name="login_email">e-mail</string>
    <string name="login_password">senha</string>
    <string name="login_enter">Entrar</string>
    <string name="login_forgot_password">Esqueci minha senha</string>
    <string name="login_no_register">Não tem cadastro?</string>
    <string name="login_register">Cadastrar</string>

    <string name="register_first_name">Primeiro nome</string>
    <string name="register_last_name">Sobrenome</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Senha</string>
    <string name="register_ddd">DDD</string>
    <string name="register_register">Cadastro</string>
    <string name="register_phone">Celular</string>


    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Cadastrar</string>

    <string name="title_filter">Filtro</string>
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="empty_service_list">No Services Information Available</string>
    <string name="title_widget_detail">Locals</string>


</resources>
