<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_google_plus"
            android:clickable="true"
            android:padding="12dp"
            android:src="@drawable/ic_google_plus_24dp" />

        <ImageView
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_facebook"
            android:clickable="true"
            android:padding="12dp"
            android:src="@drawable/ic_facebook_24dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:id="@+id/local_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text" />

        <View
            android:id="@+id/local_divider1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@color/divider" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="16dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:typeface="sans" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:typeface="sans" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout2"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_white_border"
        android:text="@string/login_enter"
        android:textColor="@color/accent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/login_forgot_password"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"
        android:typeface="sans" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/register_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:id="@+id/local_divider3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_no_register"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text"
            android:textSize="12sp" />

        <View
            android:id="@+id/local_divider4"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@color/divider" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_black"
        android:text="@string/login_register"
        android:textColor="@android:color/white" />
</RelativeLayout>
