<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_google_plus"
            android:clickable="true"
            android:padding="12dp"
            android:src="@drawable/ic_google_plus_24dp" />

        <ImageView
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_facebook"
            android:clickable="true"
            android:padding="12dp"
            android:src="@drawable/ic_facebook_24dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:id="@+id/local_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ou"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text" />

        <View
            android:id="@+id/local_divider1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@color/divider" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/register_first_name"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:typeface="sans" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/register_last_name"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:typeface="sans" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:typeface="sans" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textInputLayout">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/register_ddd"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:typeface="sans"
            android:layout_above="@+id/button4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout"
        android:layout_toRightOf="@+id/textInputLayout2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/register_phone"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:typeface="sans"
            android:layout_above="@+id/button4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textInputLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:typeface="sans"
            android:layout_above="@+id/button4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_black"
        android:text="@string/register_register"
        android:textColor="@android:color/white" />

</RelativeLayout>
